src/css/ChoiceCard.css
.choice-card{
    display: flex;
    align-items: center;
    justify-content: flex-start;
}

.choice-card .radio-button,
.choice-card .image{
    margin: 0 1.5%;
}

.choice-card .text{
    margin: 0 4.5% 0 1.5%;
}

.one,.two{
    flex:1;
    display: flex;
    justify-content: center;
    align-items: center;
    /* border: solid 1px; */
}

.two {
    display: flex;
    justify-content: center;
    align-items: center;
}

.three{
    flex: 7;
    padding-left: 3%;
}

.two .image-section {
    height: 50px;
    width: 50px;
    margin-top: 5px;
}


.selectStyle{
    background: #FFF1EF;
    border: 1px solid #FE8276;
    box-sizing: border-box;
    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.12);
    border-radius: 6px;
    /* padding: 2% 2%;
    padding: 3% 0%; */
    height: 64px;
    cursor:pointer
}

.deselectStyle{
    border: 1px solid #CACACA;
    box-sizing: border-box;
    /* filter: drop-shadow(0px 1px 10px rgba(0; 0; 0; 0.12)); */
    border-radius: 6px;
    margin: 6% 0%;
    background: white;
    /* padding: 2% 2%; */
    height: 64px;
    cursor:pointer
}

.selectTextStyle{
    font-style: normal;
    font-weight: 500;
    line-height: 24px;
    color: #FF8277;
}

.deselectTextStyle{
    font-style: normal;
    font-weight: 400;
    line-height: 24px;
    color: #333333;
}

.subtext{
    font-size:15px;
    margin-left:3px;
    margin-top:5px
}
@media only screen and (max-width: 480px) {
    .choice-card {
        height: 57px;
    }
    
    .selectStyle{
        margin: 5% 0%;
    }
    
    .deselectStyle{
        
    }
}


@media only screen and (min-width: 480px) {
    .choice-card {
        height: 64px;
    }
    
    .selectStyle{
        margin: 6% 0%;
        font-size: 18px;
        
    }
    
    .deselectStyle{
        font-size: 18px;
    }
}

